--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Basic test page</title>
-    </head>
-    <body>
-        <h1>Welcome to my site</h1>
-        <p>This is a simple HTML page</p>
-    </body>
-    </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Emoterra - Phase 2 Prototype</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <canvas id="world"></canvas>
+  <div id="instructions">
+    <p>Use keys 1–5 to simulate global emotion:</p>
+    <ul>
+      <li>1: Joy</li>
+      <li>2: Rage</li>
+      <li>3: Sorrow</li>
+      <li>4: Curiosity</li>
+      <li>5: Serenity</li>
+    </ul>
+  </div>
+  <script src="main.js"></script>
+</body>
+</html>
